--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quiz - História do Acre</title>
+  <title>Quiz - Historia do Acre</title>
   <meta name="theme-color" content="#2196f3">
   <link rel="manifest" href="manifest.json">
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f0f0f0; }
+    dy {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background: url("fundo.jpg") no-repeat center center fixed;
+  background-size: cover; /* cobre a tela toda */
     header { background: #2196f3; color: white; padding: 15px; text-align: center; }
     main { max-width: 800px; margin: auto; padding: 20px; }
     .tabs { display: flex; justify-content: center; margin-bottom: 20px; }
@@ -35,7 +40,7 @@
 </head>
 <body>
   <header>
-    <h1>História do Acre - Quiz</h1>
+    <h1>HistÃ³ria do Acre - Quiz</h1>
   </header>
   <main>
     <div class="tabs">
@@ -43,17 +48,17 @@
       <button id="tab-editor">Editar Perguntas</button>
     </div>
 
-    <!-- Seção Quiz -->
+    <!-- SeÃ§Ã£o Quiz -->
     <section id="quiz-section" class="section active">
       <div class="quiz-container">
         <h2 id="lesson-title">Selecione uma aula</h2>
         <select id="lesson-select"></select>
         <div id="quiz"></div>
-        <button class="next-btn" id="next-btn">Próxima Pergunta</button>
+        <button class="next-btn" id="next-btn">PrÃ³xima Pergunta</button>
       </div>
     </section>
 
-    <!-- Seção Editor -->
+    <!-- SeÃ§Ã£o Editor -->
     <section id="editor-section" class="section">
       <div class="editor">
         <h2 id="form-title">Adicionar Pergunta</h2>
@@ -63,8 +68,8 @@
         <label>Pergunta:</label>
         <textarea id="question-input"></textarea>
         
-        <label>Opções (separe por vírgula):</label>
-        <input type="text" id="options-input" placeholder="Opção A, Opção B, Opção C">
+        <label>OpÃ§Ãµes (separe por vÃ­rgula):</label>
+        <input type="text" id="options-input" placeholder="OpÃ§Ã£o A, OpÃ§Ã£o B, OpÃ§Ã£o C">
         
         <label>Resposta correta:</label>
         <input type="text" id="answer-input">
@@ -72,7 +77,7 @@
         <button id="add-btn">Adicionar Pergunta</button>
 
         <div class="lesson-list">
-          <h3>Aulas já criadas:</h3>
+          <h3>Aulas jÃ¡ criadas:</h3>
           <div id="lesson-list"></div>
         </div>
       </div>
@@ -130,7 +135,7 @@
             document.getElementById("answer-input").value = q.answer;
             editing = { lesson, index: i };
             formTitle.textContent = "Editar Pergunta";
-            addBtn.textContent = "Salvar Alterações";
+            addBtn.textContent = "Salvar AlteraÃ§Ãµes";
           });
           // Deletar
           li.querySelector(".delete-btn").addEventListener("click", () => {
@@ -250,7 +255,7 @@
       quizSection.classList.remove("active");
     });
 
-    // ===== Inicialização =====
+    // ===== InicializaÃ§Ã£o =====
     renderLessonOptions();
 
     // ===== Registrar Service Worker =====
@@ -261,4 +266,5 @@
     }
   </script>
 </body>
+
 </html>
