--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta charset="utf-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quiz - História do Acre</title>
   <meta name="theme-color" content="#2196f3">
@@ -26,7 +26,7 @@
       z-index: -1;
     }
     header {
-      background: rgba(33, 150, 243, 0.9);
+      background: #013418e6;
       color: white;
       padding: 15px;
       text-align: center;
@@ -35,13 +35,13 @@
     .tabs { display: flex; justify-content: center; margin-bottom: 20px; }
     .tabs button {
       flex: 1; padding: 10px; border: none;
-      background: #ddd; cursor: pointer;
+      background: #36f479; cursor: pointer;
     }
-    .tabs button.active { background: #2196f3; color: white; }
+    .tabs button.active { background: #013418e6; color: white; }
     .section { display: none; }
     .section.active { display: block; }
     .quiz-container, .editor {
-      background: rgba(255,255,255,0.95);
+      background: #36f479;
       padding: 20px; border-radius: 8px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.2);
     }
@@ -49,13 +49,13 @@
     .options button {
       display: block; margin: 5px 0; width: 100%;
       padding: 10px; border: none; border-radius: 5px;
-      background: #ddd; cursor: pointer;
+      background: #cae6ce; cursor: pointer;
     }
     .options button.correct { background: #4caf50; color: white; }
     .options button.wrong { background: #e74c3c; color: white; }
     .next-btn {
       display: none; margin-top: 15px; padding: 10px 20px;
-      background: #2196f3; color: white; border: none;
+      background: #013418e6; color: white; border: none;
       border-radius: 5px; cursor: pointer;
     }
     .editor input, .editor textarea {
@@ -78,7 +78,7 @@
       font-size: 12px; border: none;
       border-radius: 3px; cursor: pointer;
     }
-    .edit-btn { background: #2196f3; color: white; }
+    .edit-btn { background: #013418e6; color: white; }
     .delete-btn { background: #e74c3c; color: white; }
   </style>
 </head>
