--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
       position: fixed;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      background: #fffff;
+      background: #9ff78c;
       z-index: -1;
     }
     header {
       background: #023805;
-      color: white;
+      color: #9ff78c;
       padding: 15px;
       text-align: center;
     }
@@ -34,13 +34,13 @@
     .tabs { display: flex; justify-content: center; margin-bottom: 20px; }
     .tabs button {
       flex: 1; padding: 10px; border: none;
-      background: #ddd; cursor: pointer;
+      background: #9ff78c; cursor: pointer;
     }
     .tabs button.active { background: #023805; color: white; }
     .section { display: none; }
     .section.active { display: block; }
     .quiz-container, .editor {
-      background: rgba(255,255,255,0.95);
+      background: #9ff78c;
       padding: 20px; border-radius: 8px;
       box-shadow: 0 2px 6px #023805;
     }
@@ -48,13 +48,13 @@
     .options button {
       display: block; margin: 5px 0; width: 100%;
       padding: 10px; border: none; border-radius: 5px;
-      background: #ddd; cursor: pointer;
+      background: #9ff78c; cursor: pointer;
     }
     .options button.correct { background: #4caf50; color: white; }
     .options button.wrong { background: #e74c3c; color: white; }
     .next-btn {
       display: none; margin-top: 15px; padding: 10px 20px;
-      background: #023805; color: white; border: none;
+      background: #023805; color: #9ff78c; border: none;
       border-radius: 5px; cursor: pointer;
     }
     .editor input, .editor textarea {
@@ -62,12 +62,12 @@
     }
     .editor button {
       margin-top: 10px; padding: 10px; border: none;
-      border-radius: 5px; background: #4caf50;
-      color: white; cursor: pointer;
+      border-radius: 5px; background: #023805;
+      color: #9ff78c; cursor: pointer;
     }
     .lesson-list { margin-top: 20px; }
     .lesson-list li {
-      margin: 5px 0; background: #f9f9f9;
+      margin: 5px 0; background: #9ff78c;
       padding: 8px; border-radius: 5px;
     }
     .lesson-list button {
@@ -77,11 +77,11 @@
     .edit-btn { background: #023805; color: white; }
     .delete-btn { background: #e74c3c; color: white; }
     #player-login, #admin-login {
-      background: rgba(255,255,255,0.95);
+      background: #9ff78c;
       padding: 20px; border-radius: 8px;
       margin-bottom: 20px; box-shadow: 0 2px 6px rgba(0,0,0,0.2);
     }
-    #scoreboard { margin-top: 20px; background: #19ec27; padding: 15px; border-radius: 8px; }
+    #scoreboard { margin-top: 20px; background: #9ff78c; padding: 15px; border-radius: 8px; }
   </style>
 </head>
 <body>
