--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
       position: fixed;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      background: #9ff78c;
+      background: rgba(0,0,0,0.4);
       z-index: -1;
     }
     header {
       background: #023805;
-      color: #9ff78c;
+      color: #f4f804;
       padding: 15px;
       text-align: center;
     }
@@ -36,13 +36,13 @@
       flex: 1; padding: 10px; border: none;
       background: #9ff78c; cursor: pointer;
     }
-    .tabs button.active { background: #023805; color: white; }
+    .tabs button.active { background: #023805; color: #9ff78c; }
     .section { display: none; }
     .section.active { display: block; }
     .quiz-container, .editor {
       background: #9ff78c;
       padding: 20px; border-radius: 8px;
-      box-shadow: 0 2px 6px #023805;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
     }
     .question { margin-bottom: 15px; }
     .options button {
@@ -62,8 +62,8 @@
     }
     .editor button {
       margin-top: 10px; padding: 10px; border: none;
-      border-radius: 5px; background: #023805;
-      color: #9ff78c; cursor: pointer;
+      border-radius: 5px; background: #4caf50;
+      color: white; cursor: pointer;
     }
     .lesson-list { margin-top: 20px; }
     .lesson-list li {
@@ -79,7 +79,7 @@
     #player-login, #admin-login {
       background: #9ff78c;
       padding: 20px; border-radius: 8px;
-      margin-bottom: 20px; box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+      margin-bottom: 20px; box-shadow: 0 2px 6px #023805;
     }
     #scoreboard { margin-top: 20px; background: #9ff78c; padding: 15px; border-radius: 8px; }
   </style>
@@ -134,7 +134,7 @@
         <label>Resposta correta:</label>
         <input type="text" id="answer-input">
         <button id="add-btn">Adicionar Pergunta</button>
-        <button id="reload-questions" style="background:#00ff08;margin-left:5px;">🔄 Recarregar da nuvem</button>
+        <button id="reload-questions" style="background:#ff9800;margin-left:5px;">🔄 Recarregar da nuvem</button>
         <div class="lesson-list">
           <h3>Aulas já criadas:</h3>
           <div id="lesson-list"></div>
@@ -144,7 +144,7 @@
   </main>
 
   <script>
-    const ADMIN_PASSWORD = "04650465";
+    const ADMIN_PASSWORD = "12345";
 
     function loadLessons() { return JSON.parse(localStorage.getItem("lessons")) || {}; }
     function saveLessons(data) { localStorage.setItem("lessons", JSON.stringify(data)); }
