--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       padding: 10px; border: none; border-radius: 5px;
       background: #9ff78c; cursor: pointer;
     }
-    .options button.correct { background: #4caf50; color: white; }
+    .options button.correct { background: #02f80a; color: white; }
     .options button.wrong { background: #e74c3c; color: white; }
     .next-btn {
       display: none; margin-top: 15px; padding: 10px 20px;
@@ -81,7 +81,7 @@
       padding: 20px; border-radius: 8px;
       margin-bottom: 20px; box-shadow: 0 2px 6px #023805;
     }
-    #scoreboard { margin-top: 20px; background: #9ff78c; padding: 15px; border-radius: 8px; }
+    #scoreboard { margin-top: 20px; background: #f5f8f4; padding: 15px; border-radius: 8px; }
   </style>
 </head>
 <body>
